<resources>
    <string name="app_name">追梦直播</string>
    <string name="umappkey">58114a552ae85b3f2c0019ca</string>
    <string name="facebookid">686369434861962</string>
    <string name="listlodmore">上拉加载更多</string>
    <string name="listfooter">正在加载....</string>
    <string name="listsuc">加载完成</string>
    <string name="lister">加载出错</string>
    <string name="listnomore">已经到底啦！</string>
    <string name="stop">暂停</string>
    <string name="start">下载</string>
    <string name="dianhua">400-8888-8888</string>
    <string name="gfyxid">huayuanmv7v68e94eg</string>
    <string name="youxiang">265984644@hu.com</string>
    <string name="fxbt">你的好友邀请你一起参加追梦直播</string>
    <string name="fxnr">我在追梦直播，快一起来看吧</string>
    <string name="fxnr1">我在追梦直播，邀请码是</string>
    <string name="fxnr2">，一起来看吧</string>
    <string name="logout">账号已在其他设备登录</string>
    <string name="nolivehint">该主播还未开始直播</string>
    <string name="loginhint">请先登录</string>
    <string name="nullpermiss">授权失败</string>
    <string name="vipcode">VIP邀请码登录</string>
    <string name="mobileregist">手机注册</string>
    <string name="nulluserhint">请使用手机注册或登录</string>
    <string name="nullmobile">请填写正确手机号</string>
    <string name="noauthcode">获取验证码获取失败，请重试</string>
    <string name="againhint">再按一次退出</string>
    <string name="login">登录</string>
    <string name="login2">登录</string>
    <string name="rexieyi">追梦直播用户注册协议</string>
    <string name="login_failed">账号或密码错误</string>
    <string name="loginexc">登录失败</string>
    <string name="login_exception">无效输入</string>
    <string name="regist">注册</string>
    <string name="authcode">获取验证码</string>
    <string name="authcodeyet">重新获取验证码</string>
    <string name="authhint">s后重新获取</string>
    <string name="next">下一步</string>
    <string name="yes">确定</string>
    <string name="yes1">确认</string>
    <string name="wancheng">完成</string>
    <string name="logincode">注册码登陸</string>
    <string name="fogetpass">忘记密码</string>
    <string name="zhibozhong">直播中</string>
    <string name="nobozhong">未直播</string>
    <string name="livenull">直播失败</string>
    <string name="area">选择城市</string>
    <string name="sheng">请选择省</string>
    <string name="shi">请选择市</string>
    <string name="xian">请选择区（县）</string>
    <string name="fogetpasshint">忘记密码？</string>
    <string name="authcodehint">请输入验证码</string>
    <string name="mobilehint">请输入手机号</string>
    <string name="passkeyhint">请输入密码</string>
    <string name="registpasshint">请输入6至12位密码（字母和数字组合）</string>
    <string name="registpasshint1">请再输入一次密码</string>
    <string name="agehint">请输入年龄</string>
    <string name="registqiduhint">请选择地区</string>
    <string name="registganderhint">性別</string>
    <string name="noganderhint">请选择性別</string>
    <string name="nopswhint">密码长度不正确</string>
    <string name="logincodehint">请输入邀请码</string>
    <string name="tongyi">同意</string>
    <string name="jieshou">接受</string>
    <string name="xieyi">《网络服务协议》</string>
    <string name="noxieyi">请先同意《网络服务协议》</string>
    <string name="musichot">热门歌曲</string>
    <string name="mymusichot">我的</string>
    <string name="mymusic">我的音乐</string>
    <string name="live_starting">直播已开始</string>
    <string name="zanting">暂停</string>
    <string name="bofang">播放</string>
    <string name="live_finished">直播已结束</string>
    <string name="onlinepeo">在线人数</string>
    <string name="qinmi">亲密度</string>
    <string name="remen">热门</string>
    <string name="gds">高大上</string>
    <string name="sh">奢华</string>
    <string name="dd">低调</string>
    <string name="liveerid">在线人数</string>
    <string name="tip">提示</string>
    <string name="ok">确定</string>
    <string name="living_finished">主播已停止直播，直播结束</string>
    <string name="not_support_version">当前系统版本不支持滤镜模式，请选择普通模式</string>
    <string name="net_broken">网络链接已断开</string>
    <string name="nim_status_unlogin">未登录</string>
    <string name="nim_status_connecting">连接中...</string>
    <string name="nim_status_logining">登录中...</string>
    <string name="message_history_query">云消息记录</string>
    <string name="message_search_title">搜索本地消息记录</string>
    <string name="message_clear">清空本地消息记录</string>
    <string name="avchat_no_pick_up">未接听</string>
    <string name="snapchat_longclick_to_view">按住查看</string>
    <string name="snapchat_title">阅后即焚</string>
    <string name="input_panel_file">发送文件</string>
    <string name="input_panel_RTS">白 板</string>
    <string name="input_panel_snapchat">阅后即焚</string>
    <string name="input_panel_tip">Tip</string>
    <string name="input_panel_audio_call">语音通话</string>
    <string name="input_panel_video_call">视频通话</string>
    <string name="message_info">聊天信息</string>
    <string name="create_normal_team">创建讨论组</string>
    <string name="msg_notice">消息提醒</string>
    <string name="is_not_filter_mode">当前模式不支持滤镜</string>
    <string name="sfrzhint1">正在认证中，请不要重复认证</string>
    <string name="sfrzhint2">认证成功，不能重复认证</string>
    <string name="czpf">操作过于频繁，请稍后再试</string>
    <string name="hwkszb">该主播还未开始直播</string>
    <string name="nullyue">余额不足</string>
    <string name="overlive">直播结束</string>
    <string name="wszchint">请先完善注册</string>
    <string name="fanhuishouye">返回首頁</string>
    <string name="sousuohint">请输入用户名或直播标题</string>
    <string name="sousuohint1">请输入用户名或用户ID</string>
    <string name="yqmbdhint">请输入邀请码</string>
    <string name="sousuo">搜索</string>
    <string name="zuixin">最新</string>
    <string name="tongcheng">同城</string>
    <string name="guanzhu">关注</string>
    <string name="hongli">红利</string>
    <string name="wodehongli">我的红利</string>
    <string name="wodexiaoxi">我的消息</string>
    <string name="hongliguanli">红利管理</string>
    <string name="caiwuguanli">财务管理</string>
    <string name="yqm">邀请码</string>
    <string name="hlguiz">规则说明：\n\t1.活动对象：本活动针对所有用户；\n\t2.活动时间：永久\n\t3.参与条件：\n\t\t⑴所有已实名认证的用户，\n\t\t⑵奖励播钻>200的用户\n\n\t4.该活动由追梦直播保留最终解释权</string>
    <string name="hlguiz1">规则说明：（点击查看详细）\n\t1.活动对象：本活动针对所有用户；\n\t2.活动时间：永久...</string>
    <string name="wdtd">我的团队</string>
    <string name="jlbz">奖励播钻  ￥</string>
    <string name="yjdy">一级队员</string>
    <string name="ejdy">二级队员</string>
    <string name="sjdy">三级队员</string>
    <string name="zwsj">暂还没有数据!</string>
    <string name="shouyitixian">收益额</string>
    <string name="tixianjilu">提现记录</string>
    <string name="tixian">提现</string>
    <string name="tixian1">提\t\t\t\t现</string>
    <string name="shijian">时间</string>
    <string name="jine">金额</string>
    <string name="zhuangtai">状态</string>
    <string name="yonghumingid">用户名（ID）</string>
    <string name="tixianzhbd">提现账户绑定</string>
    <string name="zfb">支付寶</string>
    <string name="yhk">銀行卡</string>
    <string name="ljbd">立即绑定</string>
    <string name="ljtx">立即提现</string>
    <string name="bdhint">绑定</string>
    <string name="bdhint2">将成为您的提现账户</string>
    <string name="zh">账号</string>
    <string name="zher">输入账号有误！</string>
    <string name="er">有误！</string>
    <string name="qingshuru">请输入</string>
    <string name="qingxzlw">请选择礼物</string>
    <string name="zhenshixingming">真实姓名</string>
    <string name="bzye">播钻余额</string>
    <string name="txzh">提现账户</string>
    <string name="txbz">提现播钻</string>
    <string name="dzje">到账金额</string>
    <string name="beizhu">备注</string>
    <string name="beizhuhint">1.提现会产生手续费\n2.每人每天最多提现30次，单笔最高1万元\n3.申请提现后，会进行审核，审核合格后一个工作日内将提现金额打入提现账户，请务必确认提现账户真实有效</string>
    <string name="txbzhint">请输入不少于200的播钻数额</string>
    <string name="txbzer">播钻数额不足！</string>
    <string name="szmxcx">收支明细查询</string>
    <string name="szmx">收支明细</string>
    <string name="fsgxb">粉丝贡献榜</string>
    <string name="fs">发送</string>
    <string name="chongzhi">充值</string>
    <string name="txskxx">填写收款信息</string>
    <string name="skdz">收款地址：</string>
    <string name="qsrskdz">请输入收款地址</string>
    <string name="czje">充值金额：</string>
    <string name="qsrczje">请输入充值金额</string>
    <string name="sj">时间：</string>
    <string name="qsrsj">请输入时间</string>
    <string name="xmnc">姓名或昵称：</string>
    <string name="qsrxmnc">请输入姓名或昵称</string>
    <string name="lldh">联络电话：</string>
    <string name="qsrlldh">请输入联络电话</string>
    <string name="qrsc">确认送出</string>
    <string name="fh">返回</string>
    <string name="zysx">注意事项：</string>
    <string name="zysxhint1">1.收款时间：</string>
    <string name="zysxhint2">台湾地区（台北市，新北市）：24小时服务\n台湾地区（其他地区）：08：00~20：00\n</string>
    <string name="zysxhint3">2.收款范围：</string>
    <string name="zysxhint4">台湾地区：\n台北市/新北市/桃园市/宜兰市/台中市/花莲市/高雄市\n</string>
    <string name="zysxhint5">3.抵达时间：</string>
    <string name="zysxhint6">台湾地区（台北市，新北市）：通过客服专员确认派遣后，一小时内抵达\n台北地区（其他地区）：通过客服专员确认派遣后，两小时内抵达</string>
    <string name="zysxhint7">4.温馨提示：</string>
    <string name="zysxhint8">⑴请先确认客服专员能否在地方和时间上配合到府收款；\n⑵后期将可能取消“到府收款”，请勿过度依赖，感谢理解和支持。</string>
    <string name="qsrje">请输入金额</string>
    <string name="chongzhi1">充\t\t\t\t值</string>
    <string name="czjl">充值记录</string>
    <string name="sdlw">收到礼物</string>
    <string name="sclw">送出礼物</string>
    <string name="slb">送礼榜</string>
    <string name="fxb">分享榜</string>
    <string name="fx">分享</string>
    <string name="sendethint">在此输入你要说的话!</string>
    <string name="ggglhint">您已经关注了</string>
    <string name="zan">点赞</string>
    <string name="fans">粉丝</string>
    <string name="singin">签到送钻</string>
    <string name="intactregist">完善注册</string>
    <string name="help">帮助反馈</string>
    <string name="hezuo">合作中心</string>
    <string name="shipin">视频中心</string>
    <string name="ansj">按时间</string>
    <string name="anrd">按热度</string>
    <string name="renzheng">身份认证</string>
    <string name="zsxm">真实姓名</string>
    <string name="zsxmhint">姓名须与证件号一致</string>
    <string name="zjlx">证件类型</string>
    <string name="qxzzjlx">请选择证件类型</string>
    <string name="zjhm">证件号码</string>
    <string name="zjhmhint">证件号须与姓名一致</string>
    <string name="sczp">上传照片</string>
    <string name="sczphint">请上传正面-手持身份证三张照片</string>
    <string name="yaoqingma">邀请码补登</string>
    <string name="xiezhu">协助</string>
    <string name="guanli">管理</string>
    <string name="xzgl">协助管理</string>
    <string name="yylb">预约列表</string>
    <string name="zbsq">直播申请</string>
    <string name="changguan">场管</string>
    <string name="shouhu">守护</string>
    <string name="zhubo">主播</string>
    <string name="tianjiashouhu">添加守护</string>
    <string name="sheweishouhu">设为守护</string>
    <string name="quxiashouhu">取消守护</string>
    <string name="shezhi">设置</string>
    <string name="tixingshezhi">提醒设置</string>
    <string name="heimingdan">黑名单</string>
    <string name="lianxiwomen">联系我们</string>
    <string name="guanyuwomen">关于我们</string>
    <string name="qingchuhuancun">清除缓存</string>
    <string name="banbenxinxi">版本信息</string>
    <string name="mimaguanli">密码管理</string>
    <string name="tuichudenglu">退出登录</string>
    <string name="sytx">声音提醒</string>
    <string name="zdtx">震动提醒</string>
    <string name="tztx">通知提醒</string>
    <string name="gfxx">官方消息</string>
    <string name="tskg">推送开关</string>
    <string name="kbtx">开播提醒</string>
    <string name="kfdh">客服电话</string>
    <string name="yxdz">邮箱地址</string>
    <string name="shgy">社会公约</string>
    <string name="yszc">隐私政策</string>
    <string name="fwtk">服务条款</string>
    <string name="dlmm">登录密码</string>
    <string name="jymm">交易密码</string>
    <string name="xgmm">修改密码</string>
    <string name="xgdlmm">修改登录密码</string>
    <string name="xgjymm">修改交易密码</string>
    <string name="szjymm">设置交易密码</string>
    <string name="yzm">验证码</string>
    <string name="newpswhint">请输入新密码</string>
    <string name="aginenewpswhint">请再次输入新密码</string>
    <string name="newpsw">新密码</string>
    <string name="aginenewpsw">确认密码</string>
    <string name="pswbuxiangtong">两次输入密码不一致！</string>
    <string name="oldpsw">原密码</string>
    <string name="oldpswhint">请输入原密码</string>
    <string name="oldpswer">原密码不正确</string>
    <string name="gzgl">关注管理</string>
    <string name="paizhao">拍照</string>
    <string name="xiangce">从相册选择</string>
    <string name="quxiao">取消</string>
</resources>