<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_dark"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white_dark"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/purple_dark">

            <ImageView
                android:id="@+id/dfskback"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="13dp"
                android:paddingRight="13dp"
                android:src="@mipmap/left_go" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/chongzhi"
                android:textColor="@color/white"
                android:textSize="@dimen/default_title" />
        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="3dp"
                    android:paddingLeft="10dp"
                    android:paddingTop="8dp"
                    android:text="@string/txskxx"
                    android:textColor="@color/gray"
                    android:textSize="13sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:background="@color/white"
                    android:orientation="horizontal"
                    android:weightSum="7">

                    <RelativeLayout
                        android:layout_width="@dimen/zero"
                        android:layout_height="match_parent"
                        android:layout_weight="1.7">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:paddingLeft="8dp"
                            android:paddingTop="15dp"
                            android:text="@string/skdz"
                            android:textColor="@color/gray"
                            android:textSize="13sp" />
                    </RelativeLayout>

                    <EditText
                        android:id="@+id/dffk_skdz"
                        android:layout_width="@dimen/zero"
                        android:layout_height="80dp"
                        android:layout_gravity="center"
                        android:layout_weight="5"
                        android:background="@drawable/round5_line_gray"
                        android:gravity="top|left"
                        android:hint="@string/qsrskdz"
                        android:maxLines="3"
                        android:padding="10dp"
                        android:textColor="@color/black"
                        android:textCursorDrawable="@drawable/color_cursor"
                        android:textSize="13sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@color/white"
                    android:orientation="horizontal"
                    android:weightSum="7">

                    <RelativeLayout
                        android:layout_width="@dimen/zero"
                        android:layout_height="match_parent"
                        android:layout_weight="1.7">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:paddingLeft="8dp"
                            android:paddingTop="15dp"
                            android:text="@string/sj"
                            android:textColor="@color/gray"
                            android:textSize="13sp" />
                    </RelativeLayout>

                    <EditText
                        android:id="@+id/dffk_qksj"
                        android:layout_width="@dimen/zero"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_weight="5"
                        android:background="@drawable/round5_line_gray"
                        android:gravity="top|left"
                        android:hint="@string/qsrsj"
                        android:maxLines="1"
                        android:padding="10dp"
                        android:textColor="@color/black"
                        android:textCursorDrawable="@drawable/color_cursor"
                        android:textSize="13sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@color/white"
                    android:orientation="horizontal"
                    android:weightSum="7">

                    <RelativeLayout
                        android:layout_width="@dimen/zero"
                        android:layout_height="match_parent"
                        android:layout_weight="1.7">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:paddingLeft="8dp"
                            android:paddingTop="15dp"
                            android:text="@string/czje"
                            android:textColor="@color/gray"
                            android:textSize="13sp" />
                    </RelativeLayout>

                    <EditText
                        android:id="@+id/dffk_czje"
                        android:layout_width="@dimen/zero"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_weight="5"
                        android:background="@drawable/round5_line_gray"
                        android:gravity="top|left"
                        android:hint="@string/qsrczje"
                        android:inputType="phone"
                        android:maxLines="1"
                        android:padding="10dp"
                        android:textColor="@color/black"
                        android:textCursorDrawable="@drawable/color_cursor"
                        android:textSize="13sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@color/white"
                    android:orientation="horizontal"
                    android:weightSum="7">

                    <RelativeLayout
                        android:layout_width="@dimen/zero"
                        android:layout_height="match_parent"
                        android:layout_weight="1.7">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:paddingLeft="8dp"
                            android:paddingTop="15dp"
                            android:text="@string/xmnc"
                            android:textColor="@color/gray"
                            android:textSize="13sp" />
                    </RelativeLayout>

                    <EditText
                        android:id="@+id/dffk_xmnc"
                        android:layout_width="@dimen/zero"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_weight="5"
                        android:background="@drawable/round5_line_gray"
                        android:gravity="top|left"
                        android:hint="@string/qsrxmnc"
                        android:maxLines="1"
                        android:padding="10dp"
                        android:textColor="@color/black"
                        android:textCursorDrawable="@drawable/color_cursor"
                        android:textSize="13sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@color/white"
                    android:orientation="horizontal"
                    android:weightSum="7">

                    <RelativeLayout
                        android:layout_width="@dimen/zero"
                        android:layout_height="match_parent"
                        android:layout_weight="1.7">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:paddingLeft="8dp"
                            android:paddingTop="15dp"
                            android:text="@string/lldh"
                            android:textColor="@color/gray"
                            android:textSize="13sp" />
                    </RelativeLayout>

                    <EditText
                        android:id="@+id/dffk_lldh"
                        android:layout_width="@dimen/zero"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_weight="5"
                        android:background="@drawable/round5_line_gray"
                        android:gravity="top|left"
                        android:hint="@string/qsrlldh"
                        android:inputType="phone"
                        android:maxLines="1"
                        android:padding="10dp"
                        android:textColor="@color/black"
                        android:textCursorDrawable="@drawable/color_cursor"
                        android:textSize="13sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:layout_marginTop="30dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="@dimen/zero"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                    <LinearLayout
                        android:layout_width="@dimen/zero"
                        android:layout_height="match_parent"
                        android:layout_weight="4"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/dffk_qrsc"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:background="@drawable/round3_login"
                            android:gravity="center"
                            android:text="@string/qrsc"
                            android:textColor="@color/white"
                            android:textSize="16dp" />

                        <TextView
                            android:id="@+id/dffk_fh"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_marginTop="10dp"
                            android:background="@drawable/round3_login"
                            android:gravity="center"
                            android:text="@string/fh"
                            android:textColor="@color/white"
                            android:textSize="16dp" />
                    </LinearLayout>

                    <TextView
                        android:layout_width="@dimen/zero"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="15dp"
                    android:paddingTop="15dp"
                    android:text="@string/zysx"
                    android:textColor="@color/black"
                    android:textSize="14dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:text="@string/zysxhint1"
                    android:textColor="@color/gray"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="25dp"
                    android:paddingRight="15dp"
                    android:text="@string/zysxhint2"
                    android:textColor="@color/gray"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:text="@string/zysxhint3"
                    android:textColor="@color/gray"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="25dp"
                    android:paddingRight="15dp"
                    android:text="@string/zysxhint4"
                    android:textColor="@color/gray"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:text="@string/zysxhint5"
                    android:textColor="@color/gray"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="25dp"
                    android:paddingRight="15dp"
                    android:text="@string/zysxhint6"
                    android:textColor="@color/gray"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:text="@string/zysxhint7"
                    android:textColor="@color/gray"
                    android:textSize="13sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:paddingLeft="25dp"
                    android:paddingRight="15dp"
                    android:text="@string/zysxhint8"
                    android:textColor="@color/gray"
                    android:textSize="13sp" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</LinearLayout>
