<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_dark"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white_dark"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/purple_dark">

            <ImageView
                android:id="@+id/sztxback"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="13dp"
                android:paddingRight="13dp"
                android:src="@mipmap/left_go" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/tixingshezhi"
                android:textColor="@color/white"
                android:textSize="@dimen/default_title"  />
        </RelativeLayout>


        <TextView
            android:id="@+id/shezhitx_shengyin"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:background="@color/white"
            android:drawableRight="@drawable/onandoff"
            android:gravity="center_vertical"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/sytx"
            android:textColor="@color/color_black_2e2625"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/shezhitx_zhendong"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="1dp"
            android:background="@color/white"
            android:drawableRight="@drawable/onandoff"
            android:gravity="center_vertical"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/zdtx"
            android:textColor="@color/color_black_2e2625"
            android:textSize="15dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingTop="12dp"
            android:visibility="invisible"
            android:text="@string/tztx"
            android:textColor="@color/color_black_2e2625"
            android:textSize="13dp" />

        <TextView
            android:id="@+id/shezhitx_gfxx"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="4dp"
            android:background="@color/white"
            android:drawableRight="@drawable/onandoff"
            android:gravity="center_vertical"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/gfxx"
            android:textColor="@color/color_black_2e2625"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/shezhitx_tskg"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="1dp"
            android:background="@color/white"
            android:drawableRight="@drawable/onandoff"
            android:gravity="center_vertical"
            android:visibility="gone"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/tskg"
            android:textColor="@color/color_black_2e2625"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/shezhitx_kbtx"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="1dp"
            android:background="@color/white"
            android:drawableRight="@drawable/onandoff"
            android:gravity="center_vertical"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/kbtx"
            android:textColor="@color/color_black_2e2625"
            android:textSize="15dp" />
    </LinearLayout>

</LinearLayout>
