<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dialog_photo_xiangce"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/xiangce"
            android:textColor="@color/black"
            android:textSize="15dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white_dark" />


        <TextView
            android:id="@+id/dialog_photo_paizhao"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="8dp"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/paizhao"
            android:textColor="@color/black"
            android:textSize="15dp" />
        <TextView
            android:id="@+id/dialog_photo_quxiao"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="8dp"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/quxiao"
            android:textColor="@color/color_black_504F4F"
            android:textSize="15dp" />

    </LinearLayout>

</RelativeLayout>
